--- a/f1_project.ipynb
+++ b/f1_project.ipynb
@@ -732,7 +732,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Preprocessing of the combined data used in the models will proceed as follows: \n",
+    "### Preprocessing of the combined data\n",
     "\n",
     "1. Selecting relevant and useful columns: `Year`, `Race`, `No`, `Driver`, `Car`, `Pos (race)`, `Points`, `AvgAirTemp`, `AvgHumidity`, `AvgPressure`, `TotalRainfall`, `AvgTrackTemp`, `AvgWindDirection`, `AvgWindSpeed`\n",
     "2. Data Cleaning: Replacing \"NC\" and \"DQ\" Values in the `Pos (race)` column with the Last possible position\n",
@@ -754,9 +754,8 @@
     "- Weight $W_d$: 0.4\n",
     "- Average points per race $P_d$: Calculated as the average points per race, scaled between 0 and 2.\n",
     "$$ \n",
-    "P_d = \\frac{Total points}{Races} \\cdot 0.04\n",
+    "P_d = \\frac{Points Per Race}{Max Possible Points Per Race} \\cdot 2\n",
     "$$\n",
-    "    Here, we scale by 0.04 to fit within a range of approximately 0 to 2 based on recent performance data.\n",
     "\n",
     "\n",
     "- Weight $Q_d$: 0.3\n",
@@ -787,14 +786,14 @@
     "\n",
     "Assumed values:\n",
     "- Weight $P_c$: 0.5\n",
-    "- Race results $E_c$: Average race results scaled between 0 and 2.\n",
+    "- Engine Performance $E_c$: Average race results scaled between 0 and 2.\n",
     "$$\n",
     "E_c = \\frac{Total Wins + Podium}{Possible max} \\cdot 2\n",
     "$$\n",
     "\n",
     "\n",
     "- Weight $R_c$: 0.5\n",
-    "- Finish rate $C_c$: Scaled finish rates and overall competitiveness.\n",
+    "- Car Competitiveness $C_c$: Scaled finish rates and overall competitiveness.\n",
     "$$\n",
     "C_c = \\frac{Finish Rate}{Max finish rate} \\cdot 2\n",
     "$$"
@@ -833,7 +832,7 @@
     "df_processed = df_processed.groupby(['Year', 'Race'], group_keys=False).apply(replace_nc_dq)\n",
     "\n",
     "# Convert \"Pos (race)\" column to numeric, forcing errors to NaN, then fill NaNs with 0 (or any placeholder value if needed)\n",
-    "df_processed['Pos (race)'] = pd.to_numeric(df_processed['Pos (race)'], errors='coerce').fillna(0).astype(int)"
+    "df_processed['Pos (race)'] = pd.to_numeric(df_processed['Pos (race)'], errors='coerce').fillna(20).astype(int)"
    ]
   },
   {
@@ -855,9 +854,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Lewis Hamilton', 0.6)\n",
+      "('Max Verstappen', 0.55)\n",
+      "('Charles Leclerc', 0.49)\n",
+      "('Valtteri Bottas', 0.45)\n",
+      "('Sergio Perez', 0.43)\n",
+      "('Fernando Alonso', 0.4)\n",
+      "('Daniel Ricciardo', 0.36)\n",
+      "('Pierre Gasly', 0.39)\n",
+      "('Nico Hulkenberg', 0.34)\n",
+      "('Lando Norris', 0.49)\n",
+      "('Alexander Albon', 0.36)\n",
+      "('Lance Stroll', 0.33)\n",
+      "('Zhou Guanyu', 0.31)\n",
+      "('Yuki Tsunoda', 0.33)\n",
+      "('Esteban Ocon', 0.41)\n",
+      "('Kevin Magnussen', 0.33)\n",
+      "('George Russell', 0.51)\n",
+      "('Carlos Sainz', 0.47)\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 4\n",
     "# Define components for driver skill rating calculation\n",
@@ -881,7 +907,6 @@
     "    'George Russell': 16,\n",
     "    'Carlos Sainz': 14\n",
     "}\n",
-    "\n",
     "qualifying_position = {\n",
     "    'Lewis Hamilton': 1.5,\n",
     "    'Max Verstappen': 1,\n",
@@ -902,7 +927,6 @@
     "    'George Russell': 3,\n",
     "    'Carlos Sainz': 5\n",
     "}\n",
-    "\n",
     "consistency = {\n",
     "    'Lewis Hamilton': 1,\n",
     "    'Max Verstappen': 1.6,\n",
@@ -927,51 +951,32 @@
     "# Calculate driver skill ratings\n",
     "driver_ratings = {}\n",
     "for driver in points_per_race.keys():\n",
-    "    P_d = points_per_race[driver] * 0.04\n",
+    "    P_d = points_per_race[driver] / 24 * 2\n",
     "    A_d = 2 - (qualifying_position[driver] / 10)\n",
     "    S_d = 2 - (consistency[driver] / 5)\n",
     "    R_d = (0.4 * P_d + 0.3 * A_d + 0.3 * S_d) / 3\n",
     "    driver_ratings[driver] = round(R_d, 2)\n",
-    "# print(*driver_ratings.items(), sep='\\n')\n",
+    "print(*driver_ratings.items(), sep='\\n')\n",
     "# print(driver_ratings)\n",
     "\n",
-    "# driver_ratings = {\n",
-    "#     'Lewis Hamilton': 2.2,\n",
-    "#     'Max Verstappen': 2.1,\n",
-    "#     'Charles Leclerc': 1.7,\n",
-    "#     'Valtteri Bottas': 1.5,\n",
-    "#     'Sergio Perez': 1.3,\n",
-    "#     'Fernando Alonso': 1.2,\n",
-    "#     'Daniel Ricciardo': 1.0,\n",
-    "#     'Pierre Gasly': 1.4,\n",
-    "#     'Nico Hulkenberg': 1.1,\n",
-    "#     'Lando Norris': 1.6,\n",
-    "#     'Alexander Albon': 1.2,\n",
-    "#     'Lance Stroll': 1.0,\n",
-    "#     'Zhou Guanyu': 0.9,\n",
-    "#     'Yuki Tsunoda': 1.0,\n",
-    "#     'Esteban Ocon': 1.4,\n",
-    "#     'Kevin Magnussen': 1.0,\n",
-    "#     'George Russell': 1.8,\n",
-    "#     'Carlos Sainz': 1.6,\n",
-    "#     'Logan Sargeant': 0.9\n",
-    "# }\n",
     "\n",
-    "def replace_and_get_max_rating(cell, ratings_dict):\n",
-    "    # Extract relevant names\n",
-    "    found_names = re.findall(r'\\b(?:' + '|'.join(re.escape(name) for name in ratings_dict.keys()) + r')\\b', cell)\n",
-    "    # Replace with ratings\n",
-    "    ratings = [ratings_dict[name] for name in found_names]\n",
-    "    # Return the maximum rating\n",
-    "    return max(ratings) if ratings else None\n",
+    "# def replace_and_get_max_rating(cell, ratings_dict):\n",
+    "#     # Extract relevant names\n",
+    "#     found_names = re.findall(r'\\b(?:' + '|'.join(re.escape(name) for name in ratings_dict.keys()) + r')\\b', cell)\n",
+    "#     # Replace with ratings\n",
+    "#     ratings = [ratings_dict[name] for name in found_names]\n",
+    "#     # Return the maximum rating\n",
+    "#     return max(ratings) if ratings else None\n",
     "\n",
-    "df_processed['Driver'] = df_processed['Driver'].apply(lambda x: replace_and_get_max_rating(x, driver_ratings))"
+    "# df_processed['Driver'] = df_processed['Driver'].apply(lambda x: replace_and_get_max_rating(x, driver_ratings))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1076,7 +1081,9 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1244,6 +1251,147 @@
    "outputs": [],
    "source": [
     "df_processed.to_csv('data_processing/processed_data.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Model\n",
+    "The goal of both models was to determine the race position 𝑦 for each formula 1 driver:\n",
+    "$$ y \\sim Binomial(19, \\theta) $$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.1. Model 1:\n",
+    "$$\n",
+    "\\theta = \\alpha_{\\text{R}_d} + \\alpha_{\\text{R}_c}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\alpha_{\\text{R}_d} \\sim \\mathcal{N}(0, \\sigma)\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\alpha_{\\text{R}_c} \\sim \\mathcal{N}(0, \\sigma)\n",
+    "$$\n",
+    "\n",
+    "The $\\theta$ calculated by the first model was determined based on the average skills of the driver $\\alpha_{\\text{R}_d}$ and the average benefits of the given car constructor $\\alpha_{\\text{R}_c}$.\n",
+    "\n",
+    "**Descriptions of the parameters:**\n",
+    "- Parameter $\\alpha_{\\text{R}_d}$\\\n",
+    "The average skills of each driver are assessed by assigning them a value from a normal distribution with a standard deviation $\\sigma$. Positive values suggest that the driver is below average, while negative values suggest that the driver is above average.\n",
+    "- Parameter $\\alpha_{\\text{R}_c}$\\\n",
+    "The average benefits for each driver from selecting a car by a particular constructor are assessed by assigning each a value derived from a normal distribution with standard deviation $\\sigma$. Positive values suggest that the constructor's performance is below average, whereas negative values suggest that the constructor's performance is above average.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2. Model 2:\n",
+    "$$\n",
+    "\\theta = \\alpha_{\\text{R}_d} + \\alpha_{\\text{R}_c} + \\alpha_{\\text{qualifications}}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\alpha_{\\text{R}_d} \\sim \\mathcal{N}(0, \\sigma) + rainy * \\mathcal{N}(0, \\sigma_{rain}) \n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\alpha_{\\text{R}_c} \\sim \\mathcal{N}(0, \\sigma) + \\mathcal{N}(0, \\sigma_{wind}) \n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\alpha_{\\text{qualifications}} = TODO\n",
+    "$$\n",
+    "\n",
+    "Model 2 builds upon the first model by extending the calculation of $\\theta$. Alongside the factors from the initial model, it also incorporates additional considerations such as weather conditions (wind and rain) and the qualifying position of the driver.\n",
+    "\n",
+    "**Descriptions of the parameters:**\n",
+    "- Parameter $\\alpha_{\\text{R}_d}$\\\n",
+    "Rain in Formula 1 races, though rare, is a factor that can significantly impact the final positions of drivers, revealing which ones handle it better and which ones handle it worse. The variable **rainy** is a boolean variable indicating whether it rained during the race. If it did, the baseline average skill value of the driver is adjusted. This can be interpreted as the driver performing somewhat better or worse during the race with a wet track.\n",
+    "\n",
+    "- Parameter $\\alpha_{\\text{R}_c}$\\\n",
+    "Formula 1 car constructors are always working to enhance their cars. One key focus area is reducing air resistance. The basic benefits offered by each constructor have been adjusted by incorporating data on wind conditions during the race. This adjustment reflects the constructor's effectiveness in handling air resistance.\n",
+    "\n",
+    "- Parameter $\\alpha_{\\text{qualifications}}$\\\n",
+    "TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Priors "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.1.  Explanation why particular priors for parameters were selected\n",
+    "A normal distribution for alpha parameters were selected based on the assumption that a driver with a certain skill level will typically finish near a specific position but might occasionally achieve better or worse results due to random events.\\\n",
+    "The mean value was set to 0, indicating that both the driver and the constructor are considered perfectly average in our model (generally finishing mid-pack). A standard deviation $\\sigma$ was also incorporated to reflect this variability in finishing positions.\n",
+    "\n",
+    "### 4.2.  Predictive checks for parameters\n",
+    "The parameters in the constructed models are represented by sigmas. Predictive checks for parameters involved analyzing and observing the data generated as the parameter values varied.\n",
+    "\n",
+    "### 4.3.  Pior predictive checks for measurements\n",
+    "The generated data were evaluated and analyzed with respect to variations in the alpha parameter values.\n",
+    "\n",
+    "### 4.4.  Explanation how prior parameters were selected\n",
+    "When selecting the parameters for both models, the goal was to replicate the probability distribution of drivers achieving specific positions. The parameter $\\sigma$ for drivers and constructors was chosen to ensure that the likelihood of a driver finishing in the middle positions was similar, while the probability of achieving progressively higher or lower positions decreased.\\\n",
+    "In the case of $\\sigma_{rain}$, which only appears when it rains during the race, the aim was to select a value that reflects the driver's skills within realistic boundaries, so the driver does not become too weak or too strong.\\\n",
+    "Parameter $\\sigma_{wind}$, which pertains to the impact of wind, was chosen similarly to sigma2 to affect the car to a realistic extent.\\\n",
+    "Finally, the relationship between the parameters alpha is as follows: $\\sigma$ > $\\sigma_{rain}$ > $\\sigma_{wind}$."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5. Posterior analysis (model 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5.1.  Issues with the sampling\n",
+    "There were no issues. All samplings were conducted without any obstacles."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. Posterior analysis (model 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.1.  Issues with the sampling\n",
+    "There were no issues. All samplings were conducted without any obstacles."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7. Model comaprison"
    ]
   },
   {
