--- a/f1_project.ipynb
+++ b/f1_project.ipynb
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {
     "metadata": {}
    },
@@ -140,7 +140,9 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import re"
+    "import re\n",
+    "from cmdstanpy import CmdStanModel\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -854,36 +856,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "('Lewis Hamilton', 0.6)\n",
-      "('Max Verstappen', 0.55)\n",
-      "('Charles Leclerc', 0.49)\n",
-      "('Valtteri Bottas', 0.45)\n",
-      "('Sergio Perez', 0.43)\n",
-      "('Fernando Alonso', 0.4)\n",
-      "('Daniel Ricciardo', 0.36)\n",
-      "('Pierre Gasly', 0.39)\n",
-      "('Nico Hulkenberg', 0.34)\n",
-      "('Lando Norris', 0.49)\n",
-      "('Alexander Albon', 0.36)\n",
-      "('Lance Stroll', 0.33)\n",
-      "('Zhou Guanyu', 0.31)\n",
-      "('Yuki Tsunoda', 0.33)\n",
-      "('Esteban Ocon', 0.41)\n",
-      "('Kevin Magnussen', 0.33)\n",
-      "('George Russell', 0.51)\n",
-      "('Carlos Sainz', 0.47)\n"
-     ]
-    }
-   ],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Step 4\n",
     "# Define components for driver skill rating calculation\n",
@@ -956,27 +931,14 @@
     "    S_d = 2 - (consistency[driver] / 5)\n",
     "    R_d = (0.4 * P_d + 0.3 * A_d + 0.3 * S_d) / 3\n",
     "    driver_ratings[driver] = round(R_d, 2)\n",
-    "print(*driver_ratings.items(), sep='\\n')\n",
-    "# print(driver_ratings)\n",
-    "\n",
-    "\n",
-    "# def replace_and_get_max_rating(cell, ratings_dict):\n",
-    "#     # Extract relevant names\n",
-    "#     found_names = re.findall(r'\\b(?:' + '|'.join(re.escape(name) for name in ratings_dict.keys()) + r')\\b', cell)\n",
-    "#     # Replace with ratings\n",
-    "#     ratings = [ratings_dict[name] for name in found_names]\n",
-    "#     # Return the maximum rating\n",
-    "#     return max(ratings) if ratings else None\n",
-    "\n",
-    "# df_processed['Driver'] = df_processed['Driver'].apply(lambda x: replace_and_get_max_rating(x, driver_ratings))"
+    "# print(*driver_ratings.items(), sep='\\n')\n",
+    "# print(driver_ratings)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1351,11 +1313,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.5. Prior for model 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "model1_prior = CmdStanModel(stan_file='stan/model1_prior.stan')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.6. Prior for model 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model2_prior = CmdStanModel(stan_file='stan/model2_prior.stan')"
+   ]
   },
   {
    "cell_type": "markdown",
