Lekkie poprawki opisu ostatniego rozdzialu

--- a/f1_project.ipynb
+++ b/f1_project.ipynb
@@ -2723,7 +2723,7 @@
     "\n",
     "The black dot on the plot represents the LOO value for each model, lower value indicate better predictive performance. The gray triangle represents the standard error of the LOO estimate, this show the uncertainity around the LOO value, smaller standard error indicated more precise estimates. The horizontal black line through black dot represents the confidence interval for the LOO estimate. This interval shows the range within the true LOO value is expected to lie.\n",
     "\n",
-    "Model 1 is the best performing model with the lowest LOO metric value (loo column in dataframe above) and the highest weight, indicating it is the most likely model. Model 3 is the second-best model but has a significantly higher LOO metric value and standard error compared to Model 1, reflecting a worse fit. Model 2 has the highest LOO and standard error. Despite having a weight similiar to Model 3, the high LOO value suggests it is the least credible model. "
+    "Model 1 is the best performing model with the lowest LOO metric value (loo column in dataframe above) and the highest weight, indicating it is the most likely model. Model 3 is the second-best model but has a significantly higher LOO metric value and standard error compared to Model 1, reflecting a worse fit. Model 2 has the highest LOO and standard error. Despite having a weight similiar to Model 3, the high LOO value suggests it is the least credible model. There is marginal overlap between Model 1 and 3."
    ]
   },
   {
@@ -2866,7 +2866,9 @@
     "##### Results for waic criterion\n",
     "No errors occurred when comparing models using the Waic criterion.\n",
     "\n",
-    "Model 1 should be considered the primary model due to its best WAIC value (waic column in dataframe above) and higher relative weight, indicating the best predictive accuracy and model fit. Model 3 is the second-best, can be considered as an alternative, but its significantly higher WAIC suggests that it is less optimal compared to Model 1. Model 2 is the least credbile indicated by the highest WAIC. "
+    "The black dot on the plot represents the WAIC value for each model, lower value indicate better predictive performance. The gray triangle represents the standard error of the WAIC estimate, this show the uncertainity around the WAIC value, smaller standard error indicated more precise estimates. The horizontal black line through black dot represents the confidence interval for the WAIC estimate. This interval shows the range within the true WAIC value is expected to lie.\n",
+    "\n",
+    "Model 1 should be considered the primary model due to its best WAIC value (waic column in dataframe above) and higher relative weight, indicating the best predictive accuracy and model fit. Model 3 is the second-best, can be considered as an alternative, but its significantly higher WAIC suggests that it is less optimal compared to Model 1. Model 2 is the least credbile indicated by the highest WAIC. There is marginal overlap between Model 1 and 3."
    ]
   },
   {
