Opis do do wykresow dotyczacych umiejetnosci

--- a/f1_project.ipynb
+++ b/f1_project.ipynb
@@ -1373,6 +1373,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As expected, several drivers (Lewis Hamilton, George Russell, Charles Leclerc) have a highest skill coefficient. A slightly lower coefficient has Max Verstappen that is the three-time world champion, the absolute dominator in the current era, in his case the model performed mediocre, because despite winning more than 60% of the races  between 2022 and 2024 he occasionally finished 5th-7th and at the end of the grid, which had a big impact on the model's prediction.\n",
+    "The highest coefficients for the constructor were obtained by Red Bull Racing RBPT, McLaren Mercedes and Ferrari, which is true, in the case of Mercedes the coefficient is low, which is also positive, because the drivers of this team achieved high positions because of their skills."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
@@ -1884,6 +1892,13 @@
     "\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For "
    ]
   },
   {
@@ -2903,7 +2918,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "2.7.undefined"
   }
  },
  "nbformat": 4,
