final version of project

--- a/f1_project.ipynb
+++ b/f1_project.ipynb
@@ -162,7 +162,7 @@
     "<br>Car cause changes in Race position, Qualification position and Sprint position.\n",
     "\n",
     "3. **Colliders**:\n",
-    "<br>Qualification position and Sprint position cause changes in Race position which is our outcome of analysis."
+    "<br>Colliders are Qualification position and Sprint position which cause changes in next collider - Race position which is our outcome of analysis."
    ]
   },
   {
