--- a/f1_project.ipynb
+++ b/f1_project.ipynb
@@ -15,14 +15,14 @@
    "metadata": {},
    "source": [
     "## 1. Project formulation\n",
-    "The goal of the project is to conduct a Bayesian analysis of the places held by Formula One drivers in individual races in the hybrid era, spanning 2022-2024 by predicting the positions taken by drivers in races. The hybrid era, characterized by advanced hybrid powertrain technologies, has introduced new challenges and opportunities that significantly affect race results and team strategies. The analysis aims to identify patterns and factors affecting driver performance in this modern era, using Bayesian analysis tools. The project will collect and analyze data on the results of F1 races from 2022-2024, including drivers' starting and finishing positions, weather conditions, times and finishing positions from other sessions i.e qualifications, sprint qualifications, free practices. \n",
+    "The goal of the project is to conduct a Bayesian analysis of the places held by Formula One drivers in individual races in the hybrid era, spanning 2022-2024 by predicting the positions taken by drivers in races. The hybrid era, characterized by advanced hybrid powertrain technologies, has introduced new challenges and opportunities that significantly affect race results and team strategies. The analysis aims to identify patterns and factors affecting driver performance in this modern era, using Bayesian analysis tools. The project will collect and analyze data on the results of F1 races from 2022-2024, including drivers' starting and finishing positions, weather conditions, times and finishing positions from other sessions i.e qualifications.\n",
     "\n",
     "### 1.1. Point of creating model and potential use cases\n",
     "Bayesian analysis will make it possible to model the relationship between these variables, identifying the key factors affecting drivers' final positions and to predict future results based on current data. This will enable better preparation of teams for future races, as well as a better understanding of the dynamics of competition in the hybrid era of Formula One. The analysis results can be utilized for educating new team members and drivers, helping them better understand the factors affecting their performance and to develop more effective strategies for upcoming races. Outcome can be highly useful for people involved in betting, as it can predict the positions of drivers with greater accuracy, thereby increasing the chances of winning bets. The last use case is that FIA (The Fédération Internationale de l'Automobile) can leverage the model to evaluate the impact of new technical regulations. This can help enhance the overall spectacle for fans by ensuring closer and more exciting races.\n",
     "\n",
     "### 1.2. Description of the data\n",
     "The data for all sessions from the hybrid era (seasons 2022, 2023, 2024) were scraped from the official Formula 1 website [1], and the weather data were obtained using the FastF1 API [2]. After that, the data from each race weekend were appropriately merged and sorted.\n",
-    "Below is the representation of all columns in the prepared dataset:\n",
+    "Below there is the representation of all columns in the prepared dataset:\n",
     "\n",
     "1. **Year**: The year in which the race took place.\n",
     "2. **Race**: The name or location of the race.\n",
@@ -97,7 +97,7 @@
    "metadata": {},
    "source": [
     "### 1.4. DAG\n",
-    "To visualize the relationships between the variables, we use a Directed Acyclic Graph (DAG):"
+    "To visualize the relationships between the variables, a Directed Acyclic Graph (DAG) was used."
    ]
   },
   {
@@ -782,7 +782,7 @@
     "    - AvgTrackTemp\n",
     "    - Qualifying position\n",
     "  \n",
-    "    We rejected the rest of the data because the data contained records that were difficult to analyze (many NaN values ​​in the case of qualifying and training session times), data regarding sprints because they take place relatively rarely, and their formula changed.\n",
+    "    We rejected the rest of the data because the data contained records that were difficult to analyze (many NaN values ​​in the case of qualifying and training session times), data regarding sprints because they take place relatively rare, and their formula changed.\n",
     "2. Data Cleaning: Delete records with drivers who participated only in free practice sessions and replacing `NC` and `DQ` Values in the **Pos (race)** and **Pos (qualifying)** columns with the Last possible position\n",
     "3. Choosing drivers who participated in each of the years considered.\n"
    ]
@@ -983,7 +983,7 @@
    "metadata": {},
    "source": [
     "## 3. Models\n",
-    "The objective of all three models is to determine the positions y of drivers in a Formula 1 race.\n",
+    "The objective of all three models was to determine the positions y of drivers in a Formula 1 races.\n",
     "\n",
     "$$ y \\sim Binomial(N, \\theta) $$\n",
     "\n",
@@ -993,7 +993,7 @@
     "For analyzing Formula 1 race positions from 2022 to 2024, the binomial distribution is ideal as it handles discrete outcomes like drivers' finishing positions. With 20 drivers per race, the number of trials N is 19, and the success probability $\\theta$ is calculated separately for each model.\\\n",
     "This allows the estimation of $\\theta$, the likelihood of a driver finishing in specific positions, considering multiple races as repeated trials.\n",
     "\n",
-    "Input values in Stan include N =19 and $\\theta$, while the output is the posterior distribution of $\\theta$ providing insights into driver performance across races. This straightforward model effectively captures race result variability due to factors in the hybrid era."
+    "Input values in Stan include N =19 and $\\theta$, while the output is the binomial distribution providing insights into driver performance across races. This straightforward model effectively captures race result variability due to factors in the hybrid era."
    ]
   },
   {
@@ -1121,13 +1121,13 @@
     "- **Parameter $\\alpha_{\\text{quals}}$**\\\n",
     "The effect of qualifying position is modeled with $\\mathcal{N}(0, \\sigma_{\\text{quals}}) \\cdot$ passingRatio. The normal distribution represents the variability in the importance of starting positions, with the passingRatio scaling this effect based on how easy it is to overtake in a race. This accounts for the significant role of qualifying performance in determining race outcomes.\n",
     "\n",
-    "### 4.2.  Predictive checks for parameters\n",
-    "Predictive checks involve generating simulated data from the model using the posterior distributions of the parameters and comparing it to the observed data. This helps to assess the model's ability to replicate real-world outcomes.\n",
+    "### 4.2.  Prior predictive checks for parameters\n",
+    "Predictive checks involve generating simulated data from the model using the distributions of the parameters and comparing it to the observed data. This helps to assess the model's ability to replicate real-world outcomes.\n",
     "\n",
     "**Procedure**\n",
-    "1. Generate Simulated Data: Using the posterior distributions of the parameters $\\alpha_{\\text{driver}}$, $\\alpha_{\\text{car}}$, $\\alpha_{\\text{rain}}$, $\\alpha_{\\text{temp}}$, and $\\alpha_{\\text{quals}}$, generate simulated race results.\n",
-    "2. Compare to Observed Data: Compare the distribution of simulated race positions to the observed positions from the actual race data.\n",
-    "3. Diagnostic Metrics: Use metrics such as the posterior predictive p-value, which measures the proportion of simulated data that is more extreme than the observed data. Values near 0.5 indicate good model fit.\n",
+    "1. Generate Simulated Data: Using the distributions of the parameters $\\alpha_{\\text{driver}}$, $\\alpha_{\\text{car}}$, $\\alpha_{\\text{rain}}$, $\\alpha_{\\text{temp}}$, and $\\alpha_{\\text{quals}}$, generate simulated race results.\n",
+    "2. Analyze Observed Data: Compare the distribution of simulated race positions to the observed positions from the actual race data.\n",
+    "3. Diagnostic Metrics: Use metrics such as the predictive p-value, which measures the proportion of simulated data that is more extreme than the observed data. Values near 0.5 indicate good model fit.\n",
     "\n",
     "**Interpretation**\n",
     "- If the simulated data closely matches the observed data, this suggests that the model's parameters are appropriately capturing the underlying processes influencing race outcomes.\n",
@@ -1426,7 +1426,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The introduction of weather parameters, specifically related to weather and track temperature, in the second model caused an interesting shift in the distribution of positions. In the first model, the highest probabilities were centered in the middle, whereas in the second model, the highest probabilities were for the first and last positions. From the remaining charts, it can be observed that the main reason for this is precipitation, which makes both overtaking and failing to finish the race (for example, due to an accident caused by slipping) more likely."
+    "The introduction of weather parameters, specifically related to weather and track temperature, in the second model caused an interesting shift in the distribution of positions. In the first model, the highest probabilities were centered in the middle, whereas in the second model, the highest probabilities were for the first and last positions. From the remaining charts, it can be observed that the main reason for this is rain, which makes both overtaking and failing to finish the race (for example, due to an accident caused by slipping) more likely."
    ]
   },
   {
@@ -2516,7 +2516,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When comparing models 1 and 2, model 2 shows a slight advantage in most situations. However, both models struggle with extreme cases involving unambiguous drivers, such as VER. Additionally, both models perform poorly when a driver has frequently finished in lower positions, as seen with drivers HUL and ALB. In more typical scenarios, both models perform satisfactorily."
+    "Comparing models 1 and 2, it can be observed that model 2 has a slight advantage in most cases. Unfortunately, both models struggle with drivers who usually achieve high placements but occasionally finish in lower positions, as seen with LEC, VER, RUS, and HAM."
    ]
   },
   {
@@ -2574,7 +2574,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When comparing Models 2 and 3, there are instances where each model performs better or worse, often with overlapping results. However, Model 3 appears to be superior because it avoids significant errors that Model 2 makes, such as for drivers ALB and STR."
+    "When comparing Models 2 and 3, there are instances where each model performs better or worse, often with overlapping results. However, Model 3 appears to be superior because it avoids significant errors that Model 2 makes, such as for drivers RUS and HAM."
    ]
   },
   {
@@ -3047,7 +3047,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
